
* Mudanças no div #header:
  - Inserimos o h2#slogan, uma tag em que o usuário poderá veicular o slogan de seu negócio.
  - No menu principal, acrescentamos a classe .current a cada <li> ativo. Isso traz simplicidade e flexibilidade ao CSS deste trecho.
  - Retiramos os ícones do menu prinicpal, para deixá-lo flexível a qualquer tipo de negócio. Percebemos que os ícones limitavam a versatilidade do template.
* Atualizamos os thumbnails da página de vídeos 14(videos)_all_videos_index.html; agora os thumbnails aparecem de novo.

# 06/fev/2009

* Novo formulário de checkout, com três campos em vez de um.
* Novo arquivo: erro de envio no checkout -- arquivo "05(pictures)_best_galleries_pictures_sent(05_error).html" (ver 20/dez/2008).
* Novo div: #picture_description, nas páginas de imagem grande -- "03(pictures)_best_galleries_picture(1_horizontal).html" e "03(pictures)_best_galleries_picture(2_vertical).html".
* CSS para tudo isso.
* Atualizamos o arquivo "instrucoes.html".

# 10/fev/2009

* Refatoramos o CSS. Agora o projeto está tinindo no IE6 e 7.
* Os links para as fichas técnicas agora realmente levam às fichas técnicas.
* Renomeamos o arquivo "05(pictures)_best_galleries_pictures_sent(05_error).html" (ver dia 06/fev/2009) para "06(pictures)_best_galleries_pictures_sent(01_error).html".
* Páginas com body.text agora têm padding maior no div#main_content. Vimos que é uma boa prática.
* Atualizamos o arquivo "instrucoes.html". Não se esqueça de dar uma olhada neste arquivo!

# 11/fev/2009

* A maioria dos links agora funciona. Agora, o beonthenet-estatico é um pouco menos estático: é possível navegar por todas as páginas clicando nos links, menus, tags, imagens e botões. O designer vai ter uma noção melhor do workflow do sistema, e de que página leva a que página.
* Melhoramos a legibilidade dos arquivos HTML, com melhores indentações em trechos relevantes.
* Retocamos o CSS da página de erros.

# 12/fev/2009

* Mais links funcionam; aumentou a usabilidade.